Add namespaces for links, tags, and helpers

--- a/notes.org
+++ b/notes.org
@@ -46,3 +46,4 @@
 * Other
 ** Configuration
    - Use resources/config for Rake and services
+   - Maybe create playlists of links from the same domain?
